--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,6 +23,14 @@ form {
   text-align: center;
 }
 
+.image {
+  height: 20rem;
+}
+
+.image img {
+  height: 100%;
+}
+
 .main-header {
   width: 100%;
   height: 3.5rem;
@@ -197,12 +205,15 @@ form {
   color: white;
 }
 
-.image {
-  height: 20rem;
+.btn.danger {
+  color: red;
+  border-color: red;
 }
 
-.image img {
-  height: 100%;
+.btn.danger:hover,
+.btn.danger:active {
+  background: red;
+  color: white;
 }
 
 @media (min-width: 768px) {
